# embedded

./: .gitignore  README.md
cyt2b95/: .gitignore  README.md
cyt2b95/cyt2b95_can_x1/: .cyignore  Makefile  README.md  cyt2b95_can_x1.cprj  cyt2b95_can_x1.uvoptx  cyt2b95_can_x1.uvprojx  main.c  project_info.json
cyt2b95/cyt2b95_can_x8/: .cyignore  .gitignore  cyt2b95_can_x8.cprj  cyt2b95_can_x8.uvoptx  cyt2b95_can_x8.uvprojx  main.c
cyt2b95/cyt2b95_led_blink_systick/: .cyignore  .gitignore  Makefile  README.md  cyt2b95_led_blink_systick.cprj  cyt2b95_led_blink_systick.uvoptx  cyt2b95_led_blink_systick.uvprojx  main.c  project_info.json
cyt2b95/cyt2b95_uart_echo/: .cyignore  .gitignore  Makefile  cyt2b95_uart_echo.cprj  cyt2b95_uart_echo.uvoptx  cyt2b95_uart_echo.uvprojx  main.c  main.c.1  project_info.json
cyt2b95/hex/: cyt2b95_can_x1.hex  cyt2b95_can_x8.hex  cyt2b95_led_blink_systick.hex  cyt2b95_uart_echo.hex
gd32a503/: .gitignore  README.md  copy_and_rename_project.ps1
gd32a503/a503_adc/: a503_adc.uvprojx
gd32a503/a503_blink/: a503_blink.uvoptx  a503_blink.uvprojx
gd32a503/a503_can/: a503_can.uvprojx
gd32a503/a503_can_1M_5M/: a503_can_1M_5M.uvprojx
gd32a503/a503_empty/: a503_empty.uvoptx  a503_empty.uvprojx
gd32a503/a503_i2c_eeprom/: a503_i2c_eeprom.uvoptx  a503_i2c_eeprom.uvprojx
gd32a503/a503_lin_master/: a503_lin_master.uvprojx
gd32a503/a503_lin_slave/: a503_lin_slave.uvoptx  a503_lin_slave.uvprojx
gd32a503/a503_mfcom_uart/: a503_mfcom_uart.uvoptx  a503_mfcom_uart.uvprojx
gd32a503/a503_printf/: a503_printf.uvprojx
gd32a503/a503_spi_quad_flash/: a503_spi_quad_flash.uvoptx  a503_spi_quad_flash.uvprojx
gd32a503/a503_temp_vref/: a503_temp_vref.uvprojx
gd32a503/a503_uid/: a503_uid.uvprojx
hpm5321/: .gitignore  README.md  README_GENERATOR.md  generate_new_pj.ps1  hpm_mcan_drv.c
hpm5321/hpm4canfd/: .clang-format  README_BUILD.md
hpm5321/hpm4slcanfd/: .clangd  CLANGD_SETUP.md  build.config.example.ps1  build.config.ps1  win.ps1
hpm5321/hpm4slcanfd/app/: CMakeLists.txt
hpm5321/hpm4slcanfd/app/inc/: cdc_acm.h  linux_can.h  mcan.h  slcan.h  usb_config.h
hpm5321/hpm4slcanfd/app/src/: cdc_acm.c  main.c  mcan.c  slcan.c
hpm5321/hpm5321_led/: README_BUILD.md  build.config.example.ps1  win.ps1
hpm5321/hpm5321_mcan0/: README.md  build.config.example.ps1  build.config.ps1  win.ps1
hpm5321/hpm5321_usb_cdc_acm_0/: README_USB_CDC_ACM.md  test_usb_cdc.ps1  win.ps1
hpm5321/hpm5321_usb_cdc_acm_0/app/: CMakeLists.txt
hpm5321/hpm5321_usb_cdc_acm_0/app/src/: cdc_acm.c  cdc_acm.h  main.c  usb_config.h
hpm5321/hpm_slcanfd_x4/: .clangd  build.config.ps1  hpm4canfd.inf  hpm4canfd_unsigned.inf  hpm4canfd_win10.inf  hpm_slcan_4ch.inf
hpm5321/hpm_slcanfd_x4/app/: CMakeLists.txt
hpm5321/hpm_slcanfd_x4/app/inc/: bsp_gpio.h  bsp_time.h  bsp_timer.h  cdc_acm.h  mcan.h  slcan.h  usb_config.h
hpm5321/hpm_slcanfd_x4/app/src/: bsp_gpio.c  cdc_acm.c  main.c  mcan.c  slcan.c
hpm5e31/: .gitignore  README.md
hpm5e31/hpm5321_rgmii_mac_to_mac/: CMakeLists.txt  README.md  build.ps1
hpm5e31/hpm5e31_88q2112/: CMakeLists.txt  README.md  build.ps1
hpm5e31/hpm5e31_cherryusb_cdc_acm_vcom/: CMakeLists.txt
hpm5e31/hpm5e31_cherryusb_cdc_acm_vcom/boards/hpm5e31_lite/: pinmux.c
hpm5e31/hpm5e31_coremark/: CMakeLists.txt  build.ps1
hpm5e31/hpm5e31_gpio/: CMakeLists.txt
hpm5e31/hpm5e31_gpio/src/: gpio.c
hpm5e31/hpm5e31_hello_world/: CMakeLists.txt  build.ps1
hpm5e31/hpm5e31_lwip_rtl8211f/: CMakeLists.txt  README.md  build.ps1
hpm5e31/hpm5e31_rmii_dp83848/: CMakeLists.txt  README.md  build.ps1  build_log.txt
hpm5e31/hpm5e31_rmii_dp83848/boards/hpm5e31_lite/: CMakeLists.txt  board.h  hpm5e31_lite.yaml  pinmux.c
hpm5e31/hpm5e31_rmii_dp83848/inc/: common_cfg.h  lwipopts_app.h
hpm5e31/hpm5e31_rmii_dp83848/src/: ethernetif_local.c  lwip.c  lwiperf_local.c
lan8651/: README.md
lan8651/hpm5361_lan8651/: .gitignore  CMakeLists.txt  README.md  build.ps1
lan8651/hpm5361_lan8651/inc/: app_config.h  ethernetif_lan8651.h  lan8651.h  lwipopts_app.h
lan8651/hpm5361_lan8651/src/: ethernetif_lan8651.c  lan8651.c  main.c
lan8651/stm32f407_lan8651/: .mxproject  CMakeLists.txt  README_BK.md  README_CN.md  STM32F407XX_FLASH.ld  build.ps1  stm32f407_lan8651.ioc
lan8651/tc387_lan8651_lwip_iperf_gcc/: .gitignore  CMakeLists.txt  Cpu0_Main.c  README.md  build.ps1
lan8671/: .gitignore  README.md
lan8671/hex/: stm32h723_lan8671.hex
lan8671/stm32f407_lan8671/: .mxproject  CMakeLists.txt  build.ps1  stm32f407_lan8671.ioc
lan8671/stm32h723_lan8671/: .gitignore  CMakeLists.txt  README.md  build.ps1
lan9370/: README.md
lan9370/stm32h503_lan9370_lan8720/: .mxproject  CMakeLists.txt  README.md  STM32H503xx_FLASH.ld  STM32H503xx_RAM.ld  build.ps1  serial_monitor.py  stm32h503_lan9370.ioc
lan9370/stm32h723_lan9370/: .mxproject  CMakeLists.txt  README.md  STM32H723XG_FLASH.ld  build.ps1  stm32h723_lan9370.ioc
mcp251863/: README.md
mcp251863/McpArduPico2_Custom_1M_5M/: McpArduPico2_Custom_1M_5M.ino
mcp251863/McpArduPico2_Custom_Filters/: McpArduPico2_Custom_Filters.ino
p3t1755/: README.md
s32k3/: .gitignore  README.md
sja1124/: README.md
slcanx/: README.md
tc364/: .gitignore  README.md
tc387/: .gitignore  README.md  README_GCC.md
tc387/tc387_blink_gcc_test/: .cproject  .project  CMakeLists.txt  build.ps1
tc387/tc387_blink_gcc_test/cmake/: tasking-tricore-toolchain.cmake
tc4dx/: .gitignore  README.md
tc4dx/tc4d7_gpio/: .cproject  .project  CMakeLists.txt  Cpu0_Main.c  README.md  build.ps1
tc4dx/tc4d7_gpio/cmake/: AurixProject.cmake  tricore-gcc-toolchain.cmake
tc4dx/tc4d7_lwip_iperf/: .cproject  .project  CMakeLists.txt  Cpu0_Main.c  EthernetMacEeprom.c  IperfApp.c  IperfApp.h  README.md  build.ps1
tc4dx/tc4d7_lwip_iperf/Configurations/: Configuration.h  lwipopts.h
tc4dx/tc4d7_lwip_iperf/Libraries/Ethernet/lwip/port/include/arch/: cc.h
tc4dx/tc4d7_lwip_iperf/Libraries/Ethernet/lwip/port/src/: Ifx_Lwip.c
tc4dx/tc4d7_lwip_iperf/cmake/: tricore-gcc-toolchain.cmake
tcan4550/: README.md
tja1103/: README.md
(+1125 files in other folders)
